[tool.poetry]
name = "tigre"
version = "0.0.1"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141"

[tool.poetry.dev-dependencies]
behave = "^1.2"
radon = "^4.0"
tox = "^3.14"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
